Addition: added AnimeUserInfo and Deconversion service (no tests yet!), Refactor: corrected cusotm error attributes, updated database schema for enums (see README.md)
